--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="./scripts/GlobalVariables.js"></script>
     <script src="./lib/zip-fs-full.js"></script>
     <script src="./deps/pixi.min.js"></script>
+    <script src="./scripts/Sprites.js"></script>
     <script src="./scripts/Audio.js"></script>
     <script src="./scripts/Cursor.js"></script>
     <script src="./scripts/ApproachCircle.js"></script>
@@ -167,7 +168,7 @@
                     <input type="checkbox" id="untint" name="untint" onchange='handleCheckBox(this);' value="false">
                 </div> -->
                 <div class="selection">
-                    <label for="legacy">use legacy slider render style</label>
+                    <label for="legacy">use osu!stable slider render style</label>
                     <input type="checkbox" id="legacy" name="legacy" onchange='handleCheckBox(this);' value="false">
                 </div>
                 <div class="selection">
