Update Meta tags

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>JoSu!</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="JoSu! | osu! Beatmap Viewer">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://preview.tryz.id.vn">
+    <meta property="og:image" content="./static/JoSu.png">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="./styles/styles.css">
     <script src="./deps/countUp.js"></script>
