Added close button

--- a/index.html
+++ b/index.html
@@ -96,7 +96,12 @@
     </div>
     <div class="difficultySelector">
         <div class="popup">
-            <div class="instruction">Choose a difficulty</div>
+            <div class="instruction">
+                <div class="instructionText">Choose a difficulty</div>
+                <button id="close" disabled>
+                    <img src="./static/close.png">
+                </button>
+            </div>
             <div class="listWrapper">
                 <div class="difficultyList">
                     <div class="diff"></div>
