Added stats changes on mod changes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta property="og:title" content="JoSu! | osu! Beatmap Viewer">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://preview.tryz.id.vn">
+    <meta property="og:description" content="osu! Beatmap Viewer on the web">
     <meta property="og:image" content="https://fukutotojido.s-ul.eu/YuVf9ZAd">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="./styles/styles.css">
