Dynamic height -> 60% height for difficulty selector

--- a/index.html
+++ b/index.html
@@ -97,19 +97,22 @@
         <div id="loadingText">Getting map information</div>
     </div>
     <div class="difficultySelector">
-        <div class="popup">
-            <div class="instruction">
-                <div class="instructionText">Choose a difficulty</div>
-                <button id="close" disabled>
-                    <img src="./static/close.png">
-                </button>
-            </div>
-            <div class="listWrapper">
-                <div class="difficultyList">
-                    <div class="diff"></div>
+        <div class="selectorWrapper">
+            <div class="popup">
+                <div class="instruction">
+                    <div class="instructionText">Choose a difficulty</div>
+                    <button id="close" disabled>
+                        <img src="./static/close.png">
+                    </button>
+                </div>
+                <div class="listWrapper">
+                    <div class="difficultyList">
+                        <div class="diff"></div>
+                    </div>
                 </div>
             </div>
         </div>
+
     </div>
     <div id="block"></div>
     <div id="settingsPanel">
