--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="./lib/osujs.js"></script>
     <script src="./deps/pixi.min.js"></script>
     <script src="./scripts/GlobalVariables.js"></script>
+    <script src="./scripts/Game.js"></script>
     <script src="./scripts/Sprites.js"></script>
     <script src="./scripts/Audio.js"></script>
     <script src="./scripts/Cursor.js"></script>
@@ -32,8 +33,13 @@
     <script src="./scripts/ObjectsList.js"></script>
     <script src="./scripts/Beatmap.js"></script>
     <script src="./scripts/BeatmapFile.js"></script>
-    <!-- <script src="./lib/zip-fs-full.min.js"></script> -->
+    <script src="./scripts/Utils.js"></script>
     <script src="./index.js" defer></script>
+    <script src="./scripts/DragWindow.js" defer></script>
+    <script src="./scripts/Settings.js" defer></script>
+    <script src="./scripts/DragDrop.js" defer></script>
+    <script src="./scripts/InputBar.js" defer></script>
+    <script src="./scripts/ProgressBar.js" defer></script>
 </head>
 
 <body>
@@ -43,7 +49,7 @@
         <div class="legacyPart">
             <button id="settingsButton" onclick="openMenu()"></button>
             <div id="inputWrapper">
-                <input id="mapInput" type="text" placeholder=" " value="4135190">
+                <input id="mapInput" type="text" placeholder=" " value="4135190" onkeydown="mapInputEnter(this)">
             </div>
             <button id="submit">Load</button>
         </div>
