Initial Replay Parser functionality

--- a/index.html
+++ b/index.html
@@ -14,12 +14,18 @@
     <link rel="stylesheet" href="./styles/styles.css">
     <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://bundle.run/buffer@6.0.3"></script>
     <script src="./lib/Vibrant.min.js"></script>
-    <script src="./deps/countUp.js"></script>
-    <script src="./scripts/CubicBezier.js"></script>
     <script src="./lib/zip-fs-full.js"></script>
     <script src="./lib/osujs.js"></script>
+    <!-- <script src="./lib/lzma-min.js"></script> -->
+    <!-- <script src="./lib/lzma_worker-min.js"></script> -->
+    <script src="./lib/lzma_worker.js"></script>
+    <script src="./lib/leb128.js"></script>
+    <script src="./lib/osr-parser.js"></script>
+    <script src="./deps/countUp.js"></script>
     <script src="./deps/pixi.min.js"></script>
+    <script src="./scripts/CubicBezier.js"></script>
     <script src="./scripts/GlobalVariables.js"></script>
     <script src="./scripts/Game.js"></script>
     <script src="./scripts/Sprites.js"></script>
@@ -33,6 +39,7 @@
     <script src="./scripts/ObjectsList.js"></script>
     <script src="./scripts/Beatmap.js"></script>
     <script src="./scripts/BeatmapFile.js"></script>
+    <script src="./scripts/ScoreParser.js"></script>
     <script src="./scripts/Utils.js"></script>
     <script src="./index.js" defer></script>
     <script src="./scripts/DragWindow.js" defer></script>
