Guarding for local map and local replay

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://bundle.run/buffer@6.0.3"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script>
     <script src="./deps/cdn.jsdelivr.net_npm_ky_index.js"></script>
     <script src="./lib/Vibrant.min.js"></script>
     <script src="./lib/zip-fs-full.js"></script>
