Allow .osr loading in input bar

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <!-- <button id="record">Record</button> -->
         </div>
         <div class="utilRow">
-            <input type="file" name="map-dropper" id="map-dropper" accept=".osz">
+            <input type="file" name="map-dropper" id="map-dropper" accept=".osz,.osr">
             <button id="choose-diff" disabled>Change Difficulty</button>
         </div>
     </div>
