Added player fliar

--- a/index.html
+++ b/index.html
@@ -88,6 +88,14 @@
             <div class="stat">HP: <span id="HP">5</span></div>
             <div class="SRContainer"><span id="SR">0.00★</span></div>
         </div>
+        <div class="thePlayer">
+            <div class="blackCover"></div>
+            <img src="" class="playerAva">
+            <div class="playerInfo">
+                <div class="label">played by</div>
+                <div class="playerName"></div>
+            </div>
+        </div>
         <div id="playerController">
             <div id="timeContainer" onclick="copyUrlToClipboard()">
                 <span id="minute2digit" class="digit">0</span>
