--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <script src="./scripts/Slider.js"></script>
     <script src="./scripts/Spinner.js"></script>
     <script src="./scripts/SliderMesh.js"></script>
-    <script src="./scripts/ObjectsList.js"></script>
+    <script src="./scripts/ObjectsController.js"></script>
     <script src="./scripts/Beatmap.js"></script>
     <script src="./scripts/BeatmapFile.js"></script>
     <script src="./scripts/ScoreParser.js"></script>
