--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
                 <div class="label">played by</div>
                 <div class="playerName"></div>
             </div>
+            <div class="modsList"></div>
         </div>
         <div id="playerController">
             <div id="timeContainer" onclick="copyUrlToClipboard()">
