--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <script src="./scripts/ApproachCircle.js"></script>
     <script src="./scripts/Judgement.js"></script>
     <script src="./scripts/HitCircle.js"></script>
+    <script src="./scripts/ReverseArrow.js"></script>
     <script src="./scripts/Slider.js"></script>
     <script src="./scripts/Spinner.js"></script>
     <script src="./scripts/SliderMesh.js"></script>
