Update Slider Ball

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <script src="./scripts/Judgement.js"></script>
     <script src="./scripts/HitCircle.js"></script>
     <script src="./scripts/ReverseArrow.js"></script>
+    <script src="./scripts/SliderBall.js"></script>
     <script src="./scripts/Slider.js"></script>
     <script src="./scripts/Spinner.js"></script>
     <script src="./scripts/SliderMesh.js"></script>
