Added initial slider tick | Rework object scaling | Fix grid not interactable on window resize

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <script src="./scripts/HitCircle.js"></script>
     <script src="./scripts/ReverseArrow.js"></script>
     <script src="./scripts/SliderBall.js"></script>
+    <script src="./scripts/SliderTick.js"></script>
     <script src="./scripts/Slider.js"></script>
     <script src="./scripts/Spinner.js"></script>
     <script src="./scripts/SliderMesh.js"></script>
