--- a/index.html
+++ b/index.html
@@ -30,12 +30,14 @@
     <script src="./deps/pixi.min.js"></script>
     <script src="./scripts/CubicBezier.js"></script>
     <script src="./scripts/GlobalVariables.js"></script>
-    <script src="./scripts/Sprites.js"></script>
+    <script src="./scripts/Skinning.js"></script>
+    <script src="./scripts/Texture.js"></script>
     <script src="./scripts/Cursor.js"></script>
     <script src="./scripts/Game.js"></script>
     <script src="./scripts/Audio.js"></script>
     <script src="./scripts/ApproachCircle.js"></script>
     <script src="./scripts/Judgement.js"></script>
+    <script src="./scripts/NumberSprite.js"></script>
     <script src="./scripts/HitCircle.js"></script>
     <script src="./scripts/ReverseArrow.js"></script>
     <script src="./scripts/SliderBall.js"></script>
@@ -177,6 +179,28 @@
             </div>
         </div>
         <div class="section">
+            <div class="title">skinning</div>
+            <div class="description">change skinning type</div>
+            <div class="list">
+                <div class="radioSel">
+                    <input type="radio" name="skinning" id="argon" value="0">
+                    <label for="argon">Argon</label>
+                </div>
+                <div class="radioSel">
+                    <input type="radio" name="skinning" id="triangles" value="3">
+                    <label for="triangles">Triangles</label>
+                </div>
+                <div class="radioSel">
+                    <input type="radio" name="skinning" id="tinted" value="1">
+                    <label for="tinted">Tinted Legacy</label>
+                </div>
+                <div class="radioSel">
+                    <input type="radio" name="skinning" id="legacy_" value="2">
+                    <label for="legacy_">Legacy</label>
+                </div>
+            </div>
+        </div>
+        <div class="section">
             <div class="title">background</div>
             <div class="list">
                 <div class="selection slider">
@@ -247,14 +271,6 @@
                 <div class="selection">
                     <label for="snaking">snaking sliders</label>
                     <input type="checkbox" id="snaking" name="snaking" onchange='handleCheckBox(this);' checked>
-                </div>
-                <!-- <div class="selection">
-                    <label for="untint">un-tint sliders</label>
-                    <input type="checkbox" id="untint" name="untint" onchange='handleCheckBox(this);' value="false">
-                </div> -->
-                <div class="selection">
-                    <label for="legacy">use osu!stable slider render style</label>
-                    <input type="checkbox" id="legacy" name="legacy" onchange='handleCheckBox(this);' value="false">
                 </div>
                 <div class="selection">
                     <label for="hitAnim">hit animations</label>
