--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
                 <span id="millisecond2digit" class="digit">0</span>
                 <span id="millisecond1digit" class="digit">0</span>
             </div>
-            <button id="prevButton" onclick="goBack()"></button>
+            <button id="prevButton" onclick="go(null, false)"></button>
             <button id="playButton" onclick="playToggle()"></button>
-            <button id="nextButton" onclick="goNext()"></button>
+            <button id="nextButton" onclick="go(null, true)"></button>
             <input id="progress" type="range" min="0" step="1" value="0" oninput="setAudioTime(this)"
                 onkeydown="event.preventDefault()">
             <!-- <input id="volumeSlider" type="range" min="0" max="0.4" step="0.01" value="0.1" oninput="setAudioVolume(this)"> -->
