Fixed gameplay size for really small phones

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <div class="section">
             <div class="title">skinning</div>
             <div class="description">change gameplay appearance</div>
-            <div class="list">
+            <div class="list skin">
                 <div class="radioSel">
                     <input type="radio" name="skinning" id="argon" value="0">
                     <label for="argon">Argon</label>
