--- a/index.html
+++ b/index.html
@@ -298,6 +298,24 @@
                 </div>
             </div>
         </div>
+        <div class="section">
+            <div class="title">about me</div>
+            <div class="description">and the source code</div>
+            <div class="horizontalList">
+                <a href="https://osu.ppy.sh/users/8266808" target="_blank" rel="noreferrer noopener">
+                    <img src="static/osi.svg" class="linkIcon">
+                    <div class="linkContent">[Boy]DaLat</div>
+                </a>
+                <a href="https://twitter.com/FukutoTojido" target="_blank" rel="noreferrer noopener">
+                    <img src="https://img.icons8.com/material-rounded/24/ffffff/twitter.png" class="linkIcon">
+                    <div class="linkContent">@FukutoTojido</div>
+                </a>
+                <a href="https://github.com/FukutoTojido/beatmap-viewer-web" target="_blank" rel="noreferrer noopener">
+                    <img src="https://img.icons8.com/material-rounded/24/ffffff/github.png" class="linkIcon">
+                    <div class="linkContent">Source Code</div>
+                </a>
+            </div>
+        </div>
     </div>
 </body>
 
