Update osk import for manual import

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <!-- <button id="record">Record</button> -->
         </div>
         <div class="utilRow">
-            <input type="file" name="map-dropper" id="map-dropper" accept=".osz,.osr">
+            <input type="file" name="map-dropper" id="map-dropper" accept=".osz,.osr,.osk">
             <button id="choose-diff" disabled>Change Difficulty</button>
         </div>
     </div>
