--- a/index.html
+++ b/index.html
@@ -227,12 +227,12 @@
                     <input type="range" id="dim" name="dim" min="0" max="1" step="0.01"
                         oninput='setBackgroundDim(this);' value="0.8">
                 </div>
-                <div class="selection slider">
+                <!-- <div class="selection slider">
                     <label for="blur">background blur</label>
                     <div id="bgBlurVal" class="val">0%</div>
                     <input type="range" id="blur" name="blur" min="0" max="20" step="0.2"
                         oninput='setBackgroundBlur(this);' value="0">
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="section">
