--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                 <div class="selection slider">
                     <label for="softoffset">offset</label>
                     <div class="note">
-                        <div class="sign">-</div> &nbsp;late --------- music --------- early <div class="sign">+</div>
+                        <div class="sign">-</div> &nbsp;late ---- music ---- early <div class="sign">+</div>
                     </div>
                     <div id="softoffsetVal" class="val">0ms</div>
                     <input type="range" id="softoffset" name="softoffset" min="-100" max="100" step="1"
