Added timeline selecting

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <script src="./scripts/ScoreParser.js"></script>
     <script src="./scripts/Utils.js"></script>
     <script src="./scripts/Timeline/Timeline.js"></script>
+    <script src="./scripts/Timeline/DragWindow.js"></script>
     <script src="./scripts/Timeline/BeatLines.js"></script>
     <script src="./scripts/Timeline/HitCircle.js"></script>
     <script src="./scripts/Timeline/NumberSprite.js"></script>
