--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
             <div id="overlay"></div>
             <!-- <canvas id="canvas" width="512" height="384"></canvas> -->
         </div>
-        <div id="metadata">
+        <a id="metadata" target="_blank" rel="noreferrer noopener">
             <div id="artistTitle"></div>
             <div id="versionCreator"></div>
-        </div>
+        </a>
         <div class="stats">
             <div class="stat">CS: <span id="CS">5</span></div>
             <div class="stat">AR: <span id="AR">5</span></div>
