Added slider reverse to timeline

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     <script src="./scripts/Timeline/BeatLines.js"></script>
     <script src="./scripts/Timeline/HitCircle.js"></script>
     <script src="./scripts/Timeline/NumberSprite.js"></script>
+    <script src="./scripts/Timeline/ReverseArrow.js"></script>
     <script src="./scripts/Timeline/Slider.js"></script>
     <script src="./index.js" defer></script>
     <script src="./scripts/DragWindow.js" defer></script>
